tests/negative/gold/importD-test.gold
tests/negative/relative_dir/relative.toit:5:1: error: Failed to import '.dir'
import .dir as pre
^~~~~~
tests/negative/relative_dir/relative.toit:5:9: note: Cannot read 'tests/negative/relative_dir/dir.toit': not a regular file
import .dir as pre
        ^~~
tests/negative/relative_dir/relative.toit:6:1: error: Failed to import '.dir2'
import .dir2 as pre
^~~~~~
tests/negative/relative_dir/relative.toit:6:9: note: Folder 'tests/negative/relative_dir/dir2' exists, but is missing a 'dir2.toit' file
import .dir2 as pre
        ^~~~
tests/negative/relative_dir/relative.toit:7:1: error: Failed to import '.dir2.foo'
import .dir2.foo as toto
^~~~~~
tests/negative/relative_dir/relative.toit:7:14: note: Missing library file. Tried 'tests/negative/relative_dir/dir2/foo.toit' and 'tests/negative/relative_dir/dir2/foo/foo.toit'
import .dir2.foo as toto
             ^~~
tests/negative/relative_dir/relative.toit:8:1: error: Failed to import '.dir2.foo.bar'
import .dir2.foo.bar as toto
^~~~~~
tests/negative/relative_dir/relative.toit:8:14: note: Cannot enter 'tests/negative/relative_dir/dir2/foo': folder does not exist
import .dir2.foo.bar as toto
             ^~~
tests/negative/relative_dir/relative.toit:9:1: error: Failed to import '.dir2.not-a-directory.bar'
import .dir2.not-a-directory.bar as toto
^~~~~~
tests/negative/relative_dir/relative.toit:9:14: note: Cannot enter 'tests/negative/relative_dir/dir2/not_a_directory': not a folder
import .dir2.not-a-directory.bar as toto
             ^~~~~~~~~~~~~~~
Compilation failed
